--- a/gb/22/12/18/n13887076.md
+++ b/gb/22/12/18/n13887076.md
@@ -25,10 +25,6 @@
 <p>目前各国都从公务机关开始禁用抖音，民间私部门主要是仰赖公司治理，其服务要在台湾应用，必须授权在地人士参与，例如美国让“抖音美国化”，股权必须超过一半，同时检管程式设计。</p>
 <p>对于强化数位安全，苏紫云指出，如同卢梭所言“人没有在戏院高喊失火的自由”，对于言论自由与国家安全平衡的适切拿捏，建议政府在制定相关立法，像是数位中介服务法等，除了导入科技与传播人才参与，法律制定过程也应纳入政治学者专家，能对言论与国安有适当区分。</p>
 <p>责任编辑：玉珍 #</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/1/20/n13517607.md#1">传字节跳动裁撤投资团队</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/6/11/n13756950.md#1">“字节跳动”计划寻租圣荷西办公楼</a></li>
@@ -37,40 +33,33 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/8/n13880619.md#1">抖音假新闻染红台青思想？ 专家：没那么容易</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/12/n13883073.md#1">“抖音”染红校园该怎么办？学者提解决方法</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/15/n13885431.md#1">抖音有资安疑虑 顾立雄：应对民众揭露</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954556.md#1">赖清德：少子化原因多 政府要优先解决</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954563.md#1">老农津贴条例排富条款过时 立委提修法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954561.md#1">王世坚登记立委初选 对决何志伟</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/17/n14138141.md#1">被爆也曾赴中交流 林楚茵：有不法欢迎检举</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137725.md#1">台湾史研究讨论会 游锡堃：中共对台虎视眈眈</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137214.md#1">传播营养健康饮食假消息 台每次最重罚30万</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/12/n11108271.md#1" target="_blank">林辉：从农民吃光“忆苦饭”看中国农村真相</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/16/n11525726.md#1" target="_blank">密州狂欢节 市长：法轮大法给世界带来美好</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/1/11/n10048915.md#1" target="_blank">《苦菜花》人物原型的真实人生（6）</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/11/6/n10834201.md#1" target="_blank">这些原中共基层官员对李洪志大师的感恩</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13950568.md#1">明末改朝换代关帝君显灵  天命不可违人算不如天算</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951783.md#1">挣脱监控 新西兰中领馆出逃员工心路历程</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/11/n13947935.md#1">才能出众护国大将军 因一句话遭现世报而绝嗣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/18/n13952758.md#1">【未解之谜】别找了 外星人早来地球了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13949868.md#1">【古道人生】古代一些被权贵家庭看不起的穷女婿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954365.md#1">【全球新闻】协议达成 瑞士银行将收购瑞士信贷</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/18/n13953278.md#1">【舞蹈三剑客】神韵领舞演员传授“初学者拉筋练习”：15分钟快速放松身心</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954571.md#1">【新唐人大视野】普习密谈 普京对中共戒心深？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/18/n13953298.md#1">中国女篮国手被曝当小三 多次发照片诱惑领队</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/18/n13952900.md#1">F-35战机有三大优势 歼-20和苏-57望尘莫及</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/17/n13952121.md#1">Costco退货政策最慷慨 但11类商品不能退</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/18/n13953323.md#1">大陆配音圈大地震 姜广涛等4人被爆涉刑事犯罪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/19/n13953953.md#1">御用配音员姜广涛被捕 刘恺威近十年作品恐下架</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/19/n13953394.md#1">帮坤达庆生 被喊艺界扶龙王 柯佳嬿幽默回应</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/19/n13953476.md#1">草蜢隔13年登台开唱 张小燕与2位歌王都到场</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954264.md#1">李多海与SE7EN官宣结婚 5月举办婚礼</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13950837.md#1">年龄大听力一定差？6类护耳食物要多吃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/19/n13953544.md#1">父母如何让小孩听从指令？ 专家分享三招</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/18/n13953010.md#1">【美食天堂】创意黄瓜卷新做法～清爽美味有趣！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/7/n13944686.md#1">洗蔬果简单又好用的方法 让你不再吃进农药</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13944006.md#1">穿出职场业务力 改变穿搭好运随之而来</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/11/n14133709.md#1">【未解之谜】《推背图》47象 紫薇圣人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/6/n14131208.md#1">莫愁女 诗歌里永不老去的佳人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/30/n14127127.md#1">奉天命助圣王治世 百日为相白马化龙（上）</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/22/2/21/n13594978.md#1">【器乐独奏与协奏曲】布鲁赫《苏格兰幻想曲》，作品第46号</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/7/n14131486.md#1">郑和七下西洋成功完成使命 背后显现神秘力量</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137444.md#1">【晚间新闻】遭港府悬赏通缉 许颖婷：坚持初心</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137862.md#1">【新闻看点】知情人揭北京地铁事件惊人内幕</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/17/n14137988.md#1">【周末大V谈】中国网红踢馆“西太后”掀风波</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14136734.md#1">中共党魁访越遭冷遇？ 央视不敢报</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136601.md#1">有机和放养鸡蛋营养高？专家回答超你想像</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136609.md#1">范冰冰竹林虎啸礼服入选CNN十大红毯造型</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137649.md#1">周海媚去世前曾讲述一件诡异事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137438.md#1">自曝女儿个性像霍建华 林心如不愿她进演艺圈</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136694.md#1">解约香港无线4个月 王晶之女王子涵曝新动向</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136662.md#1">林心如自曝长相曾被嫌弃 差点无缘饰紫薇格格</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：儿童专属梦幻公主帐篷 亚马逊63%折扣</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136611.md#1">已逝明星患的是终生疾病？关于红斑狼疮一篇看懂</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137700.md#1">土库曼斯坦“地狱之门” 烈火燃烧逾半世纪</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/11/n14071207.md#1">口臭很恼人 中药茶饮也能治疗尴尬的口臭</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14135905.md#1">萝卜性寒 为何寒冬吃更好？</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/12/18/n13887076.htm">抖音遭爆在台违法执行业务 台陆委会调查</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/22/12/18/n13887076.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
