--- a/gb/22/12/19/n13887292.md
+++ b/gb/22/12/19/n13887292.md
@@ -26,52 +26,41 @@
 <p>帕森斯还说，普通人并不担心自己的数据被西方或中共情报机构收集，但政客等高阶层人士会，他们的搜索习惯可能会暴露个人一些很敏感或尴尬信息。此外，收集信息渠道很多，有数据经纪机构专门收集和出售个人信息，中共要收集美国人敏感信息的话，可以直接找这些机构买。</p>
 <p>帕森斯认为，担心抖音邪恶算法的话，与其禁整个平台，还不如直接针对算法透明进行立法和监管。他认为，当前还有其它更多更重要的国家安全担忧，急需政府关注和行动。◇</p>
 <p>责任编辑：文芳</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/7/6/n13774634.md#1">专家：TikTok耗青少年心力 推荐“干净世界”</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/28/n13854568.md#1">TikTok被曝锁定特定美国人行踪</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/11/17/n13867955.md#1">习近平让国际震惊的几个画面 微博搜索不到</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/2/n13898137.md#1">民调：在不同餐厅就餐 加拿大人视情况给小费</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/2/n13898141.md#1">加拿大税局考虑公布骗税者黑名单</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/2/n13898115.md#1">中国旅客入境需阴性证明 加国专家：数据透明更有效防疫</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/2/n13898110.md#1">2023年加拿大经济或陷温和衰退</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/2/n13898112.md#1">新年伊始 加拿大多省异常温暖多雨</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/2/n13898107.md#1">1月5日起 加拿大要求中国旅客做病毒检测</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/2/n13898104.md#1">个人增税！ 2023年11项征税变化和新规</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14136910.md#1">多伦多家政工赢得6800万彩票金球头奖</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14136756.md#1">50岁跨性别游泳运动员参加少女组比赛</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136670.md#1">福特宣布最迟2026年 便利店杂货店可卖酒</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14136610.md#1">魁省英文大学明年涨外省学生学费 后年新生须学法语</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136599.md#1">安省保险新政省钱20% 专家分析利弊</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136078.md#1">加拿大国会将审查CBC裁员及发奖金问题</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136075.md#1">加拿大人购电动汽车的兴趣正在下降</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/19/n9864134.md#1" target="_blank">毛泽东诗词宣扬暴力 为文革武斗输注能量</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/27/n11480776.md#1" target="_blank">印度中部城市学校师生学炼法轮功</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/1/16/n10061771.md#1" target="_blank">共产暴政录：拼音化与简化汉字</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/5/19/n11266537.md#1" target="_blank">聋哑人能说话 瘫痪人迈双腿 亲历者忆神迹</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/27/n13893016.md#1">《推背图》预言江泽民死亡和其后瘟疫惨象</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13896689.md#1">在工地发生事故濒死 韩国男子出现特异功能</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/23/n13890728.md#1">【百年真相】十万人命当儿戏 中共大规模杀人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/26/n13892027.md#1">他的才思从哪里来？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/24/n13891107.md#1">出生七年才说话 轮回转生为一人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/2/n13898142.md#1">【舞蹈】美国飞天大学舞蹈系中国古典舞基本功考试 中班 男生（2022年12月）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897103.md#1">【十字路口】跨年特别节目：2022年世界之最</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897332.md#1">【微视频】各国警惕中共新毒株 世卫要数据</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/19/n13887450.md#1">七种商品不再有 今年Costco有哪几个变化</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13896722.md#1">【翻墙必看】传中共上将染疫 吃特效药身亡</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897095.md#1">岳山：习讲话不算数？七学者吁救民企 文章下架</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13896835.md#1">台娱圈新年首发喜弹 翁立友“已登记”不宴客</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897308.md#1">蒙古族歌王拉苏荣病亡 曾多次为中共党魁演出</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897346.md#1">港星万梓良现身大陆商演 步履不稳需众人搀扶</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896444.md#1">李钟硕与IU公开恋情 已交往4个多月</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13896881.md#1">Aimer跨年宣布结婚喜讯 与飞内将大结成夫妻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896498.md#1">党媒终于承认染疫后遗症 心肌炎多发于中青年</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897182.md#1">新年伊始 世界各地有哪些奇特的传统？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13895971.md#1">【车评】比电动车更实用 2022 Lexus NX 450h+ F Sport Handling AWD</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/29/n13894447.md#1">如何降低他汀类药物副作用</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13896892.md#1">出国旅游记住9招 让你免烦恼</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/11/n14133709.md#1">【未解之谜】《推背图》47象 紫薇圣人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/6/n14131208.md#1">莫愁女 诗歌里永不老去的佳人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/30/n14127127.md#1">奉天命助圣王治世 百日为相白马化龙（上）</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/22/2/21/n13594978.md#1">【器乐独奏与协奏曲】布鲁赫《苏格兰幻想曲》，作品第46号</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/7/n14131486.md#1">郑和七下西洋成功完成使命 背后显现神秘力量</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137444.md#1">【晚间新闻】遭港府悬赏通缉 许颖婷：坚持初心</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137862.md#1">【新闻看点】知情人揭北京地铁事件惊人内幕</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/17/n14137988.md#1">【周末大V谈】中国网红踢馆“西太后”掀风波</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14136734.md#1">中共党魁访越遭冷遇？ 央视不敢报</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136601.md#1">有机和放养鸡蛋营养高？专家回答超你想像</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136609.md#1">范冰冰竹林虎啸礼服入选CNN十大红毯造型</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137649.md#1">周海媚去世前曾讲述一件诡异事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137438.md#1">自曝女儿个性像霍建华 林心如不愿她进演艺圈</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136694.md#1">解约香港无线4个月 王晶之女王子涵曝新动向</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136662.md#1">林心如自曝长相曾被嫌弃 差点无缘饰紫薇格格</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：儿童专属梦幻公主帐篷 亚马逊63%折扣</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136611.md#1">已逝明星患的是终生疾病？关于红斑狼疮一篇看懂</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137700.md#1">土库曼斯坦“地狱之门” 烈火燃烧逾半世纪</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/11/n14071207.md#1">口臭很恼人 中药茶饮也能治疗尴尬的口臭</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14135905.md#1">萝卜性寒 为何寒冬吃更好？</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/12/19/n13887292.htm">美国欲立法禁抖音 加拿大密切关注</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/22/12/19/n13887292.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
